<resources>
    <string name="app_name">FineWine</string>
    <string name="email">Email</string>
    <string name="register">register</string>
    <string name="password">Password</string>
    <string name="already_an_account_log_in">Already an account? Log in!</string>
    <string name="auth_failed">Wrong email or password. Try again or register</string>
    <string name="how">Fill in your name, email and a password to register to FineWine</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name = "your_bottle">This is one of your bottles. You can delete it from \'sell\'.</string>
    <string name="infochats">Shown here are all your chats with other users. If you have not read all the messages from another user yet, the name will be shown darker</string>
    <string name="surelogout">Are you sure you want to log out?</string>
    <string name="infosells">Shown here are all the bottles you sell. When you click on one of them, all information about your bottle is shown. From there you can delete your bottle. You can add a new bottle you want to sell by clicking the \'new\' button</string>
    <string name="from">"' from "</string>
    <string name="to">" to "</string>
    <string name="youselected">"You selected wines of the type '"</string>
    <string name="buyinfo">"Shown here are all the bottles for sale. When you click on one of them, all information about the bottle is shown. From there you can chat with the seller of the bottle. You can filter the bottles for sale by choosing a type of wine and a period."</string>
    <string name="please_enter">"Please enter your registered email"</string>
    <string name="wesent">"We have sent you instruction to reset your password!"</string>
    <string name="failedreset">"Failed to reset your password!"</string>
    <string name="tooshort">"Password too short, should be least 6 characters!"</string>
    <string name = "successfully">"Logged in successfully"</string>
    <string name = "youadded">"You added "</string>
    <string name = "successfully2">" successfully"</string>
    <string name = "pleasetitle">"Please fill in a title"</string>
    <string name="pleaseregion">"Please fill in a region"</string>
    <string name= "pleasestory">"Please write a story about this wine"</string>
    <string name="year">"Year: "</string>
    <string name="region">"Region: "</string>
    <string name="suredelete">"Are you sure you want to delete this wine?"</string>
    <string name= "yes">"Yes"</string>
    <string name= "no">"No"</string>
    <string name="youdeleted">"You deleted '"</string>
    <string name="welcome">"Registered successfully, welcome to TITEL APP "</string>
    <string name="yourname">"Enter your name!"</string>
    <string name="yourmail">"Enter your email address!"</string>
    <string name="enterpassword">"Enter a password!"</string>
    <string name="wwtooshort">"Password too short, enter at least 6 characters"</string>
    <string name="loading">"Loading..."</string>
    <string name = "buy">Buy</string>
    <string name = "sell">Sell</string>
    <string name = "chats">chats</string>
    <string name = "newss">new</string>
    <string name = "chat">Chat</string>
    <string name = "message">Message</string>
    <string name = "forgot">"Forgot password?"</string>
    <string name = "wejustneed">"We just need your registered Email to sent your password reset instructions."</string>
    <string name = "resetpassword">"Reset Password"</string>
    <string name = "loginwith">"Log in with your email and password"</string>
    <string name = "noaccount">"No FineWine account? Register!"</string>
    <string name = "addnew">"Add a new bottle you want to sell by filling in this info"</string>
    <string name = "newbottle">"New bottle"</string>
    <string name = "add">Add</string>
    <string name = "title">Title</string>
    <string name = "yearr">Year</string>
    <string name = "bordeaux">"e.g. Bordeaux"</string>
    <string name = "story">Story</string>
    <string name = "infoabout">"Info about your bottle(s)"</string>
    <string name = "region2">Region</string>
    <string name = "voorbeeldusername">"voorbeeld username"</string>
    <string name = "voorbeeldtijd">"voorbeeld tijd"</string>
    <string name = "voorbeeldmessage"> "message voorbeeld"</string>
    <string name = "soldby">"Sold by: "</string>
    <string-array name="winetags">
        <item>Red</item>
        <item>White</item>
        <item>Sparkling</item>
        <item>Other</item>
        <item>All</item>
    </string-array>
    <string-array name="winetags2">
        <item>Red</item>
        <item>White</item>
        <item>Sparkling</item>
        <item>Other</item>
    </string-array>
</resources>
