<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.koen.wineretry.Activities.LoginActivity"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"
        android:id="@+id/passwordlogin"
        android:layout_above="@+id/button4"
        android:paddingLeft="20dp"
        android:textColorHint="@color/lightgrey"
        android:textColor="@color/white"
        android:layout_alignLeft="@+id/emaillogin"
        android:layout_alignStart="@+id/emaillogin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:id="@+id/emaillogin"
        android:textColorHint="@color/lightgrey"
        android:textColor="@color/white"
        android:layout_above="@+id/passwordlogin"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Log in with your email and password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_above="@+id/emaillogin"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/bottle"
        android:id="@+id/imageView"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

    <Button
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="login"
        android:background="@color/white"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Forgot password?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot"
        android:textAllCaps="false"
        android:background="@null"
        android:onClick="gotoforgotpassword"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="No FineWine account? Register!"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:textAllCaps="false"
        android:background="@null"
        android:onClick="gotoregister"
        android:textColor="@color/white"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
